Bug 324430 - Allow stopping Places results updates when they are unused, r=dietrich