toolkit/components/places/src/nsNavHistoryResult.cpp
@@ -499,7 +499,8 @@ nsNavHistoryContainerResultNode::CloseContainer(PRBool aUpdateView)
 
   // recursively close all child containers
   for (PRInt32 i = 0; i < mChildren.Count(); i ++) {
-    if (mChildren[i]->IsContainer() && mChildren[i]->GetAsContainer()->mExpanded)
+    if (mChildren[i]->IsContainer() &&
+        mChildren[i]->GetAsContainer()->mExpanded)
       mChildren[i]->GetAsContainer()->CloseContainer(PR_FALSE);
   }
 
@@ -508,17 +509,25 @@ nsNavHistoryContainerResultNode::CloseContainer(PRBool aUpdateView)
   nsresult rv;
   if (IsDynamicContainer()) {
     // notify dynamic containers that we are closing
-    nsCOMPtr<nsIDynamicContainer> svc = do_GetService(mDynamicContainerType.get(), &rv);
+    nsCOMPtr<nsIDynamicContainer> svc =
+      do_GetService(mDynamicContainerType.get(), &rv);
     if (NS_SUCCEEDED(rv))
       svc->OnContainerNodeClosed(this);
   }
 
+  nsNavHistoryResult* result = GetResult();
   if (aUpdateView) {
-    nsNavHistoryResult* result = GetResult();
     NS_ENSURE_TRUE(result, NS_ERROR_FAILURE);
     if (result->GetView())
       result->GetView()->ContainerClosed(this);
   }
+
+  // If this is the root container of a result, we can tell the result to stop
+  // observing changes, otherwise the result will stay in memory and updates
+  // itself till it is cycle collected.
+  if (result->mRootNode == this)
+    result->StopObserving();
+
   return NS_OK;
 }
 
@@ -2376,12 +2385,17 @@ nsNavHistoryQueryResultNode::FillChildren()
 
   PRUint16 sortType = GetSortType();
 
-  // The default SORT_BY_NONE sorts by the bookmark index (position), 
-  // which we do not have for history queries
-  if (mOptions->QueryType() != nsINavHistoryQueryOptions::QUERY_TYPE_HISTORY ||
-      sortType != nsINavHistoryQueryOptions::SORT_BY_NONE) {
-    // once we've computed all tree stats, we can sort, because containers will
-    // then have proper visit counts and dates
+  if (mResult->mNeedsToApplySortingMode) {
+    // We should repopulate container and then apply sortingMode.  To avoid
+    // sorting 2 times we simply do that here.
+    mResult->SetSortingMode(mResult->mSortingMode);
+  }
+  else if (mOptions->QueryType() != nsINavHistoryQueryOptions::QUERY_TYPE_HISTORY ||
+           sortType != nsINavHistoryQueryOptions::SORT_BY_NONE) {
+    // The default SORT_BY_NONE sorts by the bookmark index (position), 
+    // which we do not have for history queries.
+    // Once we've computed all tree stats, we can sort, because containers will
+    // then have proper visit counts and dates.
     SortComparator comparator = GetSortingComparator(GetSortType());
     if (comparator) {
       nsCAutoString sortingAnnotation;
@@ -3260,13 +3274,20 @@ nsNavHistoryFolderResultNode::FillChildren()
   // nodes and the result node pointers on the containers
   FillStats();
 
-  // once we've computed all tree stats, we can sort, because containers will
-  // then have proper visit counts and dates
-  SortComparator comparator = GetSortingComparator(GetSortType());
-  if (comparator) {
-    nsCAutoString sortingAnnotation;
-    GetSortingAnnotation(sortingAnnotation);
-    RecursiveSort(sortingAnnotation.get(), comparator);
+  if (mResult->mNeedsToApplySortingMode) {
+    // We should repopulate container and then apply sortingMode.  To avoid
+    // sorting 2 times we simply do that here.
+    mResult->SetSortingMode(mResult->mSortingMode);
+  }
+  else {
+    // once we've computed all tree stats, we can sort, because containers will
+    // then have proper visit counts and dates
+    SortComparator comparator = GetSortingComparator(GetSortType());
+    if (comparator) {
+      nsCAutoString sortingAnnotation;
+      GetSortingAnnotation(sortingAnnotation);
+      RecursiveSort(sortingAnnotation.get(), comparator);
+    }
   }
 
   // if we are limiting our results remove items from the end of the
@@ -3863,7 +3884,8 @@ nsNavHistoryResult::nsNavHistoryResult(nsNavHistoryContainerResultNode* aRoot) :
   mIsHistoryObserver(PR_FALSE),
   mIsBookmarkFolderObserver(PR_FALSE),
   mIsAllBookmarksObserver(PR_FALSE),
-  mBatchInProgress(PR_FALSE)
+  mBatchInProgress(PR_FALSE),
+  mNeedsToApplySortingMode(PR_FALSE)
 {
   mRootNode->mResult = this;
 }
@@ -3874,6 +3896,33 @@ nsNavHistoryResult::~nsNavHistoryResult()
   mBookmarkFolderObservers.Enumerate(&RemoveBookmarkFolderObserversCallback, nsnull);
 }
 
+void
+nsNavHistoryResult::StopObserving()
+{
+  if (mIsBookmarkFolderObserver || mIsAllBookmarksObserver) {
+    nsNavBookmarks* bookmarks = nsNavBookmarks::GetBookmarksService();
+    if (bookmarks) {
+      bookmarks->RemoveObserver(this);
+      mIsBookmarkFolderObserver = PR_FALSE;
+      mIsAllBookmarksObserver = PR_FALSE;
+    }
+  }
+  if (mIsHistoryObserver) {
+    nsNavHistory* history = nsNavHistory::GetHistoryService();
+    if (history) {
+      history->RemoveObserver(this);
+      mIsHistoryObserver = PR_FALSE;
+    }
+  }
+
+  // We stop observing when root node is closed, but when reopening it result
+  // will be out of sync.  Ensure we will call FillChildren again in such a
+  // case.
+  if (mRootNode->IsQuery())
+    mRootNode->GetAsQuery()->ClearChildren(PR_TRUE);
+  else if (mRootNode->IsFolder())
+    mRootNode->GetAsFolder()->ClearChildren(PR_TRUE);
+}
 
 // nsNavHistoryResult::Init
 //
@@ -4116,6 +4165,12 @@ nsNavHistoryResult::SetSortingMode(PRUint16 aSortingMode)
   NS_ASSERTION(mOptions, "Options should always be present for a root query");
 
   mSortingMode = aSortingMode;
+
+  if (!mRootNode->mExpanded) {
+    // Need to do this later when node will be expanded.
+    mNeedsToApplySortingMode = PR_TRUE;
+    return NS_OK;
+  }
 
   // actually do sorting
   nsNavHistoryContainerResultNode::SortComparator comparator =
